# RAG-Platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/knowledge_base/: data-contracts.md  rag-principles.md
src/rag_platform/: __init__.py  api.py  chunking.py  cli.py  config.py  container.py  embeddings.py  ingestion.py  llm.py  pipeline.py  rag.py  schemas.py  store.py
tests/: test_chunking.py  test_pipeline.py  test_rag.py
