[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rag-data-platform"
version = "0.1.0"
description = "Production-minded RAG platform with an observable data engineering pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Matteo Spata" }]
keywords = ["rag", "llm", "data-engineering", "etl", "fastapi", "embeddings"]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=2.0,<3",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
llm = ["openai>=1.66,<2"]
local = ["sentence-transformers>=3.0,<4"]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.23,<1", "ruff>=0.6,<1"]

[project.scripts]
rag-platform = "rag_platform.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_platform"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
